--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,13 @@
     <head>
         <body>
             <img src="https://cdn4.vectorstock.com/i/1000x1000/98/68/time-to-travel-and-flight-booking-vector-29639868.jpg" width="1200" height="450"/>
-            <h1 style="color:red"> <CENTER>WELCOME TO TICKET BOOKING SERVICES :)</CENTER></h1>
+            <h1 style="color:red"><marquee>WELCOME TO TICKET BOOKING SERVICES :) </marquee></h1>
             <P> Welcome to our booking service we are here to help you</P>
+            <ul type="square">
+                <li>Booking</li>
+                <li>cancellation</li>
+                <li>Offers</li>
+              </ul>
             <a href="booking.html"><i>Book the tickets<i></a>
                 <h2 style="color:blue"></h2>search for flight</h2>
         </body>
